--- a/to_deploy/package.json
+++ b/to_deploy/package.json
@@ -10,7 +10,8 @@
     "copyfront": "cd ../frontend/ && npm run build --prod && cp -r build ../to_deploy",
     "copyback": "cd ../backend && cp -r ./ ../to_deploy",
     "copyfull": "npm run copyfront && npm run copyback",
-    "deploy": "cd ../to_deploy && git add . && git commit -m $MSG && git push heroku",
+    "commit": "cd ../to_deploy && git add . && git commit -m",
+    "deploy": "func() { cd ../to_deploy && git add . && git commit -m \"$1\" && git push heroku; }; func",
     "deployfull": "npm run copyfull && npm run deploy",
     "lint": "eslint . --ext=mjs,js"
   },
