--- a/backend/package.json
+++ b/backend/package.json
@@ -7,11 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.mjs",
     "dev": "nodemon index.mjs",
-    "copyfront": "cd ../frontend/ && npm run build --prod && cp -r build ../arcane-reaches-66730",
-    "copyback": "cd ../backend && cp -r ./ ../arcane-reaches-66730",
+    "copyfront": "cd ../frontend/ && npm run build --prod && cp -r build ../to_deploy",
+    "copyback": "cd ../backend && cp -r ./ ../to_deploy",
     "copyfull": "npm run copyfront && npm run copyback",
-    "deploy": "cd ../arcane-reaches-66730 && git add . && git commit -m $MSG && git push heroku",
-    "deployfull": "npm run copyfull && npm run deploy",
+    "commit": "func() { cd ../to_deploy && git add . && git commit -m \"$1\"; }; func",
+    "deploy": "cd ../to_deploy && git push heroku",
     "lint": "eslint . --ext=mjs,js"
   },
   "author": "",
