--- a/to_deploy/package.json
+++ b/to_deploy/package.json
@@ -10,8 +10,8 @@
     "copyfront": "cd ../frontend/ && npm run build --prod && cp -r build ../to_deploy",
     "copyback": "cd ../backend && cp -r ./ ../to_deploy",
     "copyfull": "npm run copyfront && npm run copyback",
-    "commit": "cd ../to_deploy && git add . && git commit -m $1",
-    "deploy": "npm run copyfull && npm run commit && git push heroku",
+    "commit": "func() { cd ../to_deploy && git add . && git commit -m \"$1\"; }; func",
+    "deploy": "func() { npm run copyfull && npm run commit -m \"$1\" && git push heroku; }; func",
     "deployfull": "npm run deploy && npm run deploy",
     "lint": "eslint . --ext=mjs,js"
   },
